--- a/exercicios/6_1/form.html
+++ b/exercicios/6_1/form.html
@@ -15,32 +15,32 @@
         <fieldset>
             <div class="linha-form">
                 <label for="nome">Nome</label>
-                <input id="nome" type="text" maxlength="40" size="40" required="required">
+                <input id="nome" name="nome" type="text" maxlength="40" size="40" required="required">
             </div>        
 
             <div class="linha-form">
                 <label for="email">Email</label>
-                <input type="text" id="email" required="required" maxlength="50" size="50">
+                <input type="text" id="email" name="email" required="required" maxlength="50" size="50">
             </div>
 
             <div class="linha-form">
                 <label for="cpf">CPF</label>
-                <input type="text" id="cpf" required='required' maxlength="11" size="11">
+                <input type="text" id="cpf" name="cpf" required='required' maxlength="11" size="11">
             </div>
 
             <div class="linha-form">
                 <label for="endereco">Endereço</label>
-                <input type="text" id="endereco" maxlength="200" size="50" required='required'>
+                <input type="text" id="endereco" name="endereco" maxlength="200" size="50" required='required'>
             </div>
 
             <div class="linha-form">
                 <label for="cidade">Cidade</label>
-                <input type="text" id="cidade" maxlength="28" size="28" required='required'>
+                <input type="text" name="cidade" id="cidade" maxlength="28" size="28" required='required'>
             </div>
 
             <div class="linha-form">
                 <label for="estados">Estados</label>
-                <select id="estados" required='required'></select>
+                <select id="estados" name="estado" required='required'></select>
             </div>
 
             <div class="linha-form">
@@ -57,10 +57,28 @@
         <fieldset>
             <div class="linha-form">
                 <label for="resumo-curriculo">Resumo do currículo</label>
-                <textarea id="resumo-curriculo" maxlength="1000" required='required'></textarea>
+                <textarea id="resumo-curriculo" name="resumo-curriculo" maxlength="1000" required='required'></textarea>
+            </div>
+
+            <div class="linha-form">
+                <label for="cargo">Cargo</label>
+                <input type="text" id="cargo" maxlength="40" size="40" name="cargo" required='required'>
+            </div>
+
+            <div class="linha-form">
+                <label for="descricao-cargo">Descrição do cargo</label>
+                <input type="text" id="descricao-cargo" maxlength="500" name="descricao-cargo" size="50" required='required'>
+            </div>
+
+            <div class="linha-form">
+                <label for="data-inicio">Data de início</label>
+                <input type="date" id="data-inicio" name="data-inicio" required='required'>
             </div>
         </fieldset>
+        <button id='botao-enviar'>Enviar</button>
     </form>
+
+    <div class="resumo-form"></div>
 
 </body>
 </html>
