finalizado a função do botao enviar

--- a/exercicios/6_1/form.html
+++ b/exercicios/6_1/form.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+    <header>
+        <h1>Cadastro de Currículo</h1>
+    </header>
     
     <form id='formulario' method="GET" onsubmit="return false">
         <fieldset>
