Parte II - Layout para telas de até 800px de largura

--- a/exercises/6_5/exercise2.html
+++ b/exercises/6_5/exercise2.html
@@ -207,7 +207,8 @@
       </p>
     </article>
 
-    <aside class="aside-two">
+    <div class="container-final">
+      <aside class="aside-two final">
         <h2>Information</h2>
         <ul class="informações">
           <li>Title: Alice's Adventures in Wonderland</li>
@@ -222,7 +223,7 @@
       </aside>
 
     <footer>
-      <h3>Copyright</h3>
+      <h3 class="final">Copyright</h3>
       <p>Project Gutenberg's Alice's Adventures in Wonderland, by Lewis Carroll</p>
 
       <p>This eBook is for the use of anyone anywhere at no cost and with
@@ -231,6 +232,7 @@
         with this eBook or online at www.gutenberg.org
       </p>
     </footer>
+    </div>    
   </div>
 
 </body>
